# arcadia

./: .gitignore  CLAUDE.md  Cargo.toml  HOW_TO_CUSTOMIZE_TEMPLATES.md  HOW_TO_WRITE_DECKS.md  HOW_TO_WRITE_FICTION.md  HOW_TO_WRITE_POSTS.md  LICENSE  README.md  ROADMAP.md  arcadia.toml  build.js  package-lock.json  package.json  site.config.js
.github/workflows/: build.yml  ci.yml  pages.yml  release.yml
embed/: 404.html  chapter.html  index.html  post.html  slide-deck.html  story-toc.html  tufte.css
example/decks/: example-deck.md  writing-decks.md
example/fiction/example-story/: chapter-02.md  story.md
example/posts/: customising-templates.md  hello-world.md  writing-decks.md  writing-fiction.md  writing-posts.md
scripts/: clear-examples.js  new-deck.js  new-post.js  new-story.js  serve.js
src/: build.rs  config.rs  feeds.rs  frontmatter.rs  main.rs  markdown.rs  mermaid.rs  new.rs  serve.rs  sitemap.rs  templates.rs
src/content/: decks.rs  fiction.rs  mod.rs  posts.rs  tags.rs
src/fiction/example-story/: chapter-01.md
src/posts/: hello-world.md
templates/: chapter.html  decks-index.html  fiction-index.html  index.html  post.html  slide-deck.html  story-toc.html  tag-page.html  tags-index.html
tests/: integration.rs
tests/fixtures/draft_post/src/posts/: my-draft.md  published.md
tests/fixtures/ejected_tufte/embed/: tufte.css
tests/fixtures/fiction_story/src/fiction/my-story/: ch1.md  ch2.md  ch3.md  story.md
tests/fixtures/sidenote_image/src/posts/: with-image.md
tests/fixtures/simple_deck/src/decks/: my-deck.md
tests/fixtures/simple_post/src/posts/: hello.md
tests/fixtures/tagged_content/: arcadia.toml
tests/fixtures/tagged_content/src/posts/: rust-post.md
tests/fixtures/with_base_url/: arcadia.toml
tests/fixtures/with_base_url/src/decks/: my-deck.md
tests/fixtures/with_base_url/src/posts/: hello.md
tests/integration/: build_assets.rs  build_decks.rs  build_feeds.rs  build_fiction.rs  build_lightbox.rs  build_posts.rs  build_tags.rs  helpers.rs  new_command.rs
(+3 files in other folders)
