[package]
name = "arcadia"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "arcadia"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
html-escape = "0.2"
axum = "0.7"
clap = { version = "4", features = ["derive"] }
pulldown-cmark = "0.12"
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
toml = "1"
slug = "0.1"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "html", "regex-fancy"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
futures-util = "0.3"
http-body-util = "0.1"
mermaid-rs-renderer = { git = "https://github.com/1jehuang/mermaid-rs-renderer", branch = "master", default-features = false }
notify = "6"
rss = "2"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

